2017-05-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftstring, ftview] Migrate gamma to `FTDemo_Display'.

	* src/ftcommon.h (FTDemo_Display): Add new field `gamma'.
	* src/ftcommon.c (FTDemo_Display_New): Initialize it.
	(FTDemo_Draw_Header): Updated.

	* src/ftgrid.c (GridStatusRec): Remove field `gamma'.
	(event_gamma_change): Updated.

	* src/ftstring.c (status): Remove field `gamma'.
	(event_gamma_change): Updated.

	* src/ftgrid.c (status): Remove field `gamma'.
	(event_gamma_change): Updated.

2017-05-28  Werner Lemberg  <wl@gnu.org>

	* src/ftbench.c (BENCH_TIME): Use `double' literal.

2017-05-27  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Split sources; change face index type to `long'.

	* src/ftinspect.cpp, src/ftinspect.h: Split into...
	* src/ftinspect/*: ...these new files.
	Do face index type change.

	* src/ftinspect/.gitignore: New file.

2017-05-24  Werner Lemberg  <wl@gnu.org>

	Minor `fread' coding issues.

	* src/ftbench.c (get_face), src/ftcommon.c (FTDemo_Install_Font):
	Make `nmemb' argument of `fread' equal 1; this allows a
	simplification of the return value test (you get either 0 or 1).

	* src/ftdiff.c (main): Handle `fread' errors.
	Problem reported by Kushal K S V S (కుషల్ కే ఎస్ వీ ఎస్)
	<kkushal32@gmail.com>.

2017-05-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftstring, ftview] Unify top header lines.

	* src/ftcommon.[ch] (FTDemo_Draw_Header): New function that displays
	information about face, size, resolution, and gamma to be used in...

	* src/ftview.c (write_header): ... here.
	* src/ftstring.c (write_header): ... here.
	* src/ftgrid.c (write_header): ... and here.
	(event_gamma_change): Updated.

2017-05-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (main): Fix segmentation fault.

2017-05-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdiff, ftgrid, ftview] Make autohint warping NORMAL option.

	* src/ftdiff.c (render_state_draw, event_help): Updated.