@@ -1025,6 +1025,8 @@
       font->num_indices = 0x10000L;
     }
 
+    handle->encoding = status.encoding;
+
     return 1;
   }
 
@@ -1371,137 +1373,14 @@
   static void
   write_header( FT_Error  error_code )
   {
-    FT_Face      face;
-    char         buf[256];
-    const char*  format;
-
-    int          line = 2;
+    char  buf[256];
+    int   line = 4;
 
 
     FTDemo_Draw_Header( handle, display, status.ptsize, status.res,
-                        error_code );
-
-    error = FTC_Manager_LookupFace( handle->cache_manager,
-                                    handle->scaler.face_id, &face );
-    if ( error )
-      Fatal( "can't access font file" );
-
-    /* char code, glyph index, glyph name */
-    if ( status.encoding == FT_ENCODING_UNICODE      ||
-         status.render_mode == RENDER_MODE_TEXT      ||
-         status.render_mode == RENDER_MODE_WATERFALL )
-      sprintf( buf, "top left charcode: U+%04X (glyph idx %d)",
-                    status.topleft,
-                    FTDemo_Get_Index( handle, (FT_UInt32)status.topleft ) );
-    else if ( status.encoding == FT_ENCODING_NONE )
-      sprintf( buf, "top left glyph idx: %d",
-                    status.topleft );
-    else
-      sprintf( buf, "top left charcode: 0x%X (glyph idx %d)",
-                    status.topleft,
-                    FTDemo_Get_Index( handle, (FT_UInt32)status.topleft ) );
-
-    if ( FT_HAS_GLYPH_NAMES( face ) )
-    {
-      char*         p;
-      unsigned int  format_len, glyph_idx, size;
-
-
-      size = strlen( buf );
-      p    = buf + size;
-      size = 256 - size;
-
-      format = ", name: ";
-      format_len = strlen( format );
-
-      if ( size >= format_len + 2 )
-      {
-        glyph_idx = (unsigned int)status.topleft;
-        if ( status.encoding != FT_ENCODING_NONE         ||
-             status.render_mode == RENDER_MODE_TEXT      ||
-             status.render_mode == RENDER_MODE_WATERFALL )
-          glyph_idx = FTDemo_Get_Index( handle, (FT_UInt32)status.topleft );
-
-        strcpy( p, format );
-        if ( FT_Get_Glyph_Name( face, glyph_idx,
-                                p + format_len, size - format_len ) )
-          *p = '\0';
-      }
-    }
-    grWriteCellString( display->bitmap, 0, (line++) * HEADER_HEIGHT,
-                       buf, display->fore_color );
-
-    line++;
-
-    if ( face->face_index >> 16 )
-    {
-      sprintf( buf, "instance %ld/%ld",
-                    face->face_index >> 16,
-                    face->style_flags >> 16 );
-
-      grWriteCellString( display->bitmap, 0, (line++) * HEADER_HEIGHT,
-                         buf, display->fore_color );
-    }
-    else
-      line++;
-
-    /* encoding */
-    if ( !( status.render_mode == RENDER_MODE_TEXT      ||
-            status.render_mode == RENDER_MODE_WATERFALL ) )
-    {
-      const char*  encoding = NULL;
-
-
-      switch ( status.encoding )
-      {
-      case FT_ENCODING_NONE:
-        encoding = "glyph order";
-        break;
-      case FT_ENCODING_MS_SYMBOL:
-        encoding = "MS Symbol";
-        break;
-      case FT_ENCODING_UNICODE:
-        encoding = "Unicode";
-        break;
-      case FT_ENCODING_SJIS:
-        encoding = "SJIS";
-        break;
-      case FT_ENCODING_PRC:
-        encoding = "PRC";
-        break;
-      case FT_ENCODING_BIG5:
-        encoding = "Big5";
-        break;
-      case FT_ENCODING_WANSUNG:
-        encoding = "Wansung";
-        break;
-      case FT_ENCODING_JOHAB:
-        encoding = "Johab";
-        break;
-      case FT_ENCODING_ADOBE_STANDARD:
-        encoding = "Adobe Standard";
-        break;
-      case FT_ENCODING_ADOBE_EXPERT:
-        encoding = "Adobe Expert";
-        break;
-      case FT_ENCODING_ADOBE_CUSTOM:
-        encoding = "Adobe Custom";
-        break;
-      case FT_ENCODING_ADOBE_LATIN_1:
-        encoding = "Latin 1";
-        break;
-      case FT_ENCODING_OLD_LATIN_2:
-        encoding = "Latin 2";
-        break;
-      case FT_ENCODING_APPLE_ROMAN:
-        encoding = "Apple Roman";
-        break;
-      default:
-        encoding = "Other";
-      }
-      grWriteCellString( display->bitmap, 0, (line++) * HEADER_HEIGHT,
-                         encoding, display->fore_color );
-    }
+                        status.render_mode != RENDER_MODE_TEXT      &&
+                        status.render_mode != RENDER_MODE_WATERFALL ?
+                        status.topleft : -1, error_code );
 
     /* render mode */
     {
@@ -1618,10 +1497,14 @@
          handle->lcd_mode != LCD_MODE_LIGHT )
     {
       /* hinting engine */
-
-      FT_Module    module         = &face->driver->root;
+      FT_Face      face;
+      FT_Module    module;
       const char*  hinting_engine = NULL;
 
+
+      FTC_Manager_LookupFace( handle->cache_manager,
+                              handle->scaler.face_id, &face );
+      module = &face->driver->root;
 
       if ( !strcmp( module->clazz->module_name, "cff" ) )
       {
